[package]
name = "cinema"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["examples/chat"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-stream = "0.1"
futures = "0.3"

[[test]]
name = "basic"
path = "tests/basic.rs"

[[test]]
name = "system"
path = "tests/system.rs"

[[test]]
name = "supervision"
path = "tests/supervision.rs"

[[test]]
name = "streams"
path = "tests/streams.rs"
